@@ -1,4 +1,6 @@
 Changes towards version 0.7:
+- Added --keepaspectratio to keep correct aspect ratio when using
+  custom resolutions in OpenGL mode - Mika
 - Add /var/tmp as possible location for temporary files. Don't try
   /tmp and /var/tmp at all on MS Windows (Cygwin excepted) - SvdB
 - Added fullscreen/windowed toggle key F11 - Mika
